RESOLVED FIXED302344
Drag image contains content from neighboring elements when css transform is involved
https://bugs.webkit.org/show_bug.cgi?id=302344
Summary Drag image contains content from neighboring elements when css transform is i...
Owen Shaw
Reported 2025-11-11 11:49:30 PST
Created attachment 477363 [details] html demo of bad drag image When a draggable element or one of its descendants is scaled down via css transform, the resulting drag image can contain text from neighboring elements that are not descendants of the draggable element. Example attached. After digging into the webkit code, it appears this was fixed in 296117@main, but regressed in 297110@main. I already have a one line fix in RenderLayer.cpp and a new test file in LayoutTests/fast/snapshot. I can submit a PR, but need to familiarize myself with the process first. Alternatively, I can add a patch file here if that's somehow easier for everyone.
Attachments
html demo of bad drag image (809 bytes, text/html)
2025-11-11 11:49 PST, Owen Shaw
no flags
Alexey Proskuryakov
Comment 1 2025-11-11 15:21:07 PST
Thank you, a PR would be highly appreciated if you are willing to work on it! Most important is to have an automated test of course, so that this doesn't regress again.
Owen Shaw
Comment 2 2025-11-12 15:49:14 PST
Radar WebKit Bug Importer
Comment 3 2025-11-18 11:50:11 PST
EWS
Comment 4 2025-11-21 11:12:28 PST
Committed 303407@main (e6308f70605c): <https://commits.webkit.org/303407@main> Reviewed commits have been landed. Closing PR #53842 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.